--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,20 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.0.6'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'java' //ver 17.00
+	id 'org.springframework.boot' version '3.0.6' //tras informaçoes para rodar o codigo
+	id 'io.spring.dependency-management' version '1.1.0' //ver 18.55
 }
-
+// basta indicar o caminho da biblioteca que ele consegue usar
 repositories {
 	mavenCentral()
 }
-
+//precisa de biblioteca aqui que meche
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0' //ver 25
+	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.0'
 }
+// ver 36
+//control , compact=desativar
+// classe começa com maiusculo já o resto minusculo
+//outros arquivos tudo minusculo
